--- a/carapesan.html
+++ b/carapesan.html
@@ -137,7 +137,7 @@
             <div class="container">
                 <div class="row d-flex justify-content-between">
                         <ul>
-                            <li><a><h1>Tersedia juga di offline store</h1></a></li>
+                            <li><a><h1>Atau bisa datang ke toko langsung</h1></a></li>
                             <li><a href="#" style="color: black;">Buka Jam 07.00 Pagi - 07.00 Malam</a></li>
                             <li><a href="#" style="color: black;">JL.Pasundan, Medan</a></li>
                         </ul>
