--- a/carapesan.html
+++ b/carapesan.html
@@ -138,7 +138,7 @@
                 <div class="row d-flex justify-content-between">
                         <ul>
                             <li><a><h1>Atau bisa datang ke toko langsung</h1></a></li>
-                            <li><a href="#" style="color: black;">Buka Jam 07.00 Pagi - 07.00 Malam</a></li>
+                            <li><a href="#" style="color: black;">Buka Senin-Minggu Jam 07.00 Pagi - 07.00 Malam</a></li>
                             <li><a href="#" style="color: black;">JL.Pasundan, Medan</a></li>
                         </ul>
                     </div>
