--- a/services.html
+++ b/services.html
@@ -138,7 +138,8 @@
         </section>
         <!-- layanan End -->
         <!--layna yg diatwkan  -->
-        
+                <section id="layanan">
+                     <div class="container">
                         <div class="section-tittle text-center mb-55">
                             <h2>Layanan Yang Kami Tawarkan</h2>
                         </div>
@@ -146,8 +147,8 @@
                 </div>
                         <div class="services-grid">
                             <div class="service-card">
-                                <div class="service-icon"><a href="">👕</div>
-                                <h3>Laundry Kiloan</h3></a>
+                                <div class="service-icon">👕</div>
+                                <h3>Laundry Kiloan</h3>
                             </div>
                             <div class="service-card">
                                 <div class="service-icon">👔</div>
