--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     <!-- Preloader Start -->
     <header>
         <!-- Header Start -->
-        <div class="header-area">
+         <div class="header-area">
             <div class="main-header">
-                <!-- Logo -->
+                <!-- Logo bos -->
                 <div class="header-left">
                     <div class="logo">
                         <a href="index.html" class="logo-text"><img src="assets/img/logo/lheader3.PNG"></a>
+                        
                     </div>
                     <div class="menu-wrapper  d-flex align-items-center">
                         <!-- Main-menu -->
